[feat] moderation system